# fns-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md  fns.py  pyproject.toml  setup.py  skill.md
.github/workflows/: ci.yml
fns-skill/: SKILL.md
fns_cli/: api.py  config.py  formatting.py  hashing.py  main.py
fns_cli/commands/: admin.py  backup.py  file.py  folder.py  git_sync.py  note.py  setting.py  share.py  storage.py  vault.py
fns_cli/tests/: test_api.py  test_formatting.py  test_hashing.py
fns_cli/tests/commands/: test_note.py
tests/: test_fns.py
