[project]
name = "fns-cli"
version = "0.9.0"
description = "Fast Note Sync CLI - Interact with your Obsidian FNS service from terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "crazykuma", email = "crazykuma@users.noreply.github.com"}
]
requires-python = ">=3.6"
dependencies = [
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/crazykuma/fns-cli"
Repository = "https://github.com/crazykuma/fns-cli"

[project.scripts]
fns = "fns_cli.main:cli"

[tool.setuptools.packages.find]
include = ["fns_cli*"]
exclude = ["fns_cli.tests*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
